# voxxy-gtm-mcp

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-NOTES.md  README.md  config.example.yaml  pyproject.toml  start-mcp.cmd
gtm_mcp/: __init__.py  auth.py  coordinator.py  server.py
gtm_mcp/tools/: __init__.py  accounts.py  clients.py  containers.py  tags.py  templates.py  triggers.py  utils.py  variables.py  versions.py  workspaces.py
tests/: test_import.py  test_smoke.py
